<resources>
    <string name="app_name">3Gracing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">login</string>
    <string name="login">Login</string>
    <string name="registro">Registrar</string>

    <string name="menu_Accesorios">Accesorios</string>
    <string name="menu_Repuestos">Repuestos</string>
    <string name="menu_Cursos_Mecanica">Cursos Mecanica</string>
    <string name="menu_Editar_Perfil">Editar Perfil</string>
    <string name="salirl">Salir</string>
    <string name="nav_slideshow">Salir</string>
    <string name="show_password">ojo</string>
</resources>