<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.a3gracing.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_galleryFragment"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_editar_perfil"
            app:destination="@id/nav_editar_perfil" />
        <action
            android:id="@+id/action_nav_home_to_nav_Repuestos"
            app:destination="@id/nav_Repuestos" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.a3gracing.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.a3gracing.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_Repuestos"
        android:name="com.example.a3gracing.ui.repuesto.RepuestoFragment"
        android:label="@string/menu_Repuestos"
        tools:layout="@layout/fragment_repuestos" />

    <fragment
        android:id="@+id/nav_editar_perfil"
        android:name="com.example.a3gracing.ui.editarperfil.EditarPerfilFragment"
        android:label="@string/menu_Editar_Perfil"
        tools:layout="@layout/fragment_editar_perfil" />

    <fragment
        android:id="@+id/na"
        android:name="com.example.a3gracing.ui.editarperfil.EditarPerfilFragment"
        android:label="@string/menu_Editar_Perfil"
        tools:layout="@layout/fragment_editar_perfil" />



</navigation>